samples/_failures_safe/1761472888_c117d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6a508d3.c: In function ‘main’:
./samples/SAFE/__tmp_c6a508d3.c:149:16: error: missing terminating " character
  149 |         printf("%d. '%s' - %d occurrences
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c6a508d3.c:149:9: error: expected expression at end of input
  149 |         printf("%d. '%s' - %d occurrences
      |         ^~~~~~
./samples/SAFE/__tmp_c6a508d3.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6a508d3.c:149:9: error: expected declaration or statement at end of input
